<resources>
    <string name="app_name">仓库管理</string>
    <string name="title_activity_uhf">仓库管理</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_query">查询</string>
    <string name="title_activity_in">入库</string>
    <string name="title_activity_out">出库</string>
    <string name="title_activity_borrow">借用/归还</string>
    <string name="title_activity_stock">盘点</string>


    <string name="setting">设置</string>
    <string name="exit">退出</string>

    <string name="serialport_name">选择串口</string>
    <string name="baudrate">波特率</string>

    <string name="query">查询</string>
    <string name="in">入库</string>
    <string name="out">出库</string>
    <string name="borrow">借用/归还</string>
    <string name="stock">盘点</string>
    <string name="filter">过滤</string>

    <string name="id">编号</string>
    <string name="type">样机型号</string>
    <string name="name">产品名称</string>
    <string name="stage">样机阶段</string>
    <string name="status">样机状态</string>
    <string name="time">入库时间</string>
    <string name="location">存放位置</string>
    <string name="keeper">当前保管人</string>
    <string name="note">备注</string>
    <string name="stock_status">盘点状态</string>
    <string name="loaner">借用人</string>
    <string name="loan_date">借用日期</string>
    <string name="expected_loan_back">预计归还日期</string>
    <string name="in_stock_state">入库状态</string>

    <string name="please_scan">请扫描</string>
    <string name="msg_no_update">无更新记录</string>
    <string name="msg_not_in">无库内记录</string>
    <string name="multi_query">多条件查询</string>
    <string name="all">查看全部</string>
    <string name="stored">在库</string>
    <string name="stocked">已盘</string>
    <string name="unstored">未盘到</string>
    <string name="stock_by_type">按样机型号统计盘点结果</string>
    <string name="stock_by_location">按存放位置统计盘点结果</string>
    <string name="stock_by_keeper">按当前保管人统计盘点结果</string>
    <string name="keeper_name">借用人： %1$s</string>
    <string name="multi_value">多个值</string>
    <string name="status_fine">良品</string>
    <string name="in_stock">已入库</string>
    <string name="out_stock">未入库</string>

    <string name="save">保存</string>
    <string name="skip">跳过</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="back">返回</string>
    <string name="loan">借出</string>
    <string name="loan_back">归还</string>
    <string name="start_scan">开始扫描</string>
    <string name="stop_scan">停止扫描</string>
    <string name="select_all">全选</string>
    <string name="export">导出</string>
    <string name="new_folder">新建文件夹</string>
    <string name="to_parent">返回上一级</string>
</resources>
